--- a/server/static/scss/defines/styles.scss
+++ b/server/static/scss/defines/styles.scss
@@ -4,22 +4,34 @@
 
 .inline			{	display: inline;		}
 .inline			{	display: inline-block;	}
+.inline-33		{	display: inline-block;	width: 33%;	max-width: 350px;	vertical-align: middle;	}
+.inline-50		{	display: inline-block;	width: 49%;	max-width: 485px;	vertical-align: middle; }
 .no-display		{ 	display: none !important;	}
 .empty 			{	display: none !important; 	}
 .align-left		{	text-align: left;	}
 .align-right	{	text-align: right;	}
+.underlined		{	border-bottom: 1px solid darkgrey;	}
 
-.underlined	{ border-bottom: 1px solid darkgrey; }
+.title			{ /* need a few examples */}
+.value	 		{	display: inline-block;	padding: 10px 20px;		vertical-align: middle;	}
+.value-title	{	position: static;		text-align: center; }
 
+/* override bootstrap '.navbar li a' padding and set to total of 15px' */
+.navbar-hhl		{ border-top: 3px solid rgba(0,0,0,0);	padding-top: 12px !important;	}
+.hhl:hover 		{ border-top-color: $ht-blue;											}
 
-.name { color: darkgrey; }
-.icon {
-	width: 15px;
-	text-align: center;
-	margin-right: 15px;
+.sns {
+	padding-left: 0;
+	display: inline;
+	margin: 5px 20px;
 }
-.big-icon		{	font-size: 64px;	}
 
+.icon		{	width: 15px;	text-align: center;	margin-right: 15px; }
+.big-icon	{					font-size: 64px;						}
+
+
+// todo rename appropriately... text-padding (20px), text-padding-wide (50px)
+.text-content	{	padding: 0px $text-padding;			}
 
 .spin-left {
 	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
@@ -30,21 +42,10 @@
 	transform: rotate(45deg);
 }
 
-.inline-50	{	max-width: 485px;	width:	49%;	display: inline-block;	vertical-align: middle; }
-.inline-33	{	max-width: 350px;	width:	33%;	display: inline-block;	vertical-align: middle;	}
-
-
-.value	 		{	display: inline-block;	padding: 10px 20px;		vertical-align: middle;	}
-.value-title	{	position: static;		text-align: center; }
-.value-panel	{ }
-
-// todo rename appropriately... text-padding
-.text-content	{	padding: 0px $text-padding;			}
-
-/* MAP: 				[FF35+]					[Chrome, Safari6+ & Opera 15+]	[IE6-9]							*/
-.greyscale			{	filter: grayscale(1);	-webkit-filter: grayscale(1);	 filter: gray;	 height: 35px;	}
-//.greyscale:hover	{	filter: grayscale(1);	-webkit-filter: grayscale(1); 									}
 
 @media (max-width: 768px) {
+	/* impacts nav-menu *NAME*; has non-zero border */
 	.text-content { padding-left: $text-padding-wide; padding-right: $text-padding-wide; }
+	.hhl:hover	{ border-top-color: rgba(0,0,0,0);	}
+	.hhl:focus	{ border-top-color: rgba(0,0,0,0) !important;	}
 }
